--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,72 @@
 
 
 @layer base {
+
+[data-theme=custom-light] {
+  color-scheme: light;
+  --b2: 0 0% 93%;
+  --b3: 0 0% 86%;
+  --in: 232 51% 58%;
+  --su: 160 84% 39%;
+  --wa: 84 77% 58%;
+  --er: 22 87% 53%;
+  --inc: 0 0% 0%;
+  --suc: 0 0% 0%;
+  --wac: 0 0% 0%;
+  --erc: 0 0% 0%;
+  --rounded-box: 1rem;
+  --rounded-btn: 0.5rem;
+  --rounded-badge: 1.9rem;
+  --border-btn: 1px;
+  --tab-border: 1px;
+  --tab-radius: 0.5rem;
+  --p: 153 50% 68%;
+  --pc: 162 10% 30%;
+  --s: 261 47% 55%;
+  --sc: 0 0% 100%;
+  --a: 33 70% 62%;
+  --ac: 0 0% 0%;
+  --n: 263 8% 33%;
+  --nc: 248 40% 92%;
+  --b1: 0 0% 100%;
+  --bc: 263 8% 33%;
+  --animation-btn: 0;
+  --animation-input: 0;
+  --btn-focus-scale: 1;
+}
+
+[data-theme=custom-dark] {
+  color-scheme: dark;
+  --b2: 0 0% 93%;
+  --b3: 0 0% 86%;
+  --in: 232 51% 58%;
+  --su: 160 84% 39%;
+  --wa: 84 77% 58%;
+  --er: 22 87% 53%;
+  --inc: 0 0% 0%;
+  --suc: 0 0% 0%;
+  --wac: 0 0% 0%;
+  --erc: 0 0% 0%;
+  --rounded-box: 1rem;
+  --rounded-btn: 0.5rem;
+  --rounded-badge: 1.9rem;
+  --border-btn: 1px;
+  --tab-border: 1px;
+  --tab-radius: 0.5rem;
+  --p: 153 50% 68%;
+  --pc: 162 10% 30%;
+  --s: 261 47% 55%;
+  --sc: 0 0% 100%;
+  --a: 33 70% 62%;
+  --ac: 0 0% 0%;
+  --n: 263 8% 33%;
+  --nc: 248 40% 92%;
+  --b1: 0 0% 100%;
+  --bc: 263 8% 33%;
+  --animation-btn: 0;
+  --animation-input: 0;
+  --btn-focus-scale: 1;
+}
   :root {
     --popover: theme(colors.base-200);
     --popover-foreground: theme(colors.base-content);
@@ -115,3 +181,6 @@
       "calt" 1;
   }
 }
+
+
+
